Add .gitignore and gradle project files, update LogParser